rs/macros/core/tests/snapshots/gservice__works_with_all_override_variants.snap
---
source: rs/macros/core/tests/gservice.rs
expression: result
---
pub struct InheritedServiceExposure<T> {
    route_idx: u8,
    inner: T,
}
impl<T: sails::meta::ServiceMeta> sails::gstd::services::Exposure
for InheritedServiceExposure<T> {
    fn interface_id() -> sails::meta::InterfaceId {
        <T as sails::meta::Identifiable>::INTERFACE_ID
    }
    fn route_idx(&self) -> u8 {
        self.route_idx
    }
    fn check_asyncness(
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
    ) -> Option<bool> {
        if !T::ASYNC {
            return Some(false);
        }
        match (interface_id, entry_id) {
            (
                id,
                eid,
            ) if id == <BaseService as sails::meta::Identifiable>::INTERFACE_ID
                && eid
                    == {
                        const ID: u16 = sails::meta::find_id(
                            <BaseService as sails::meta::ServiceMeta>::METHODS,
                            "MethodThree",
                        );
                        ID
                    } => Some(false),
            (
                id,
                eid,
            ) if id == <BaseService as sails::meta::Identifiable>::INTERFACE_ID
                && eid
                    == {
                        const ID: u16 = sails::meta::find_id(
                            <BaseService as sails::meta::ServiceMeta>::METHODS,
                            "MethodTwo",
                        );
                        ID
                    } => Some(false),
            (
                id,
                0u16,
            ) if id == <BaseService as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            _ => None,
        }
    }
}
impl<T> core::ops::Deref for InheritedServiceExposure<T> {
    type Target = T;
    fn deref(&self) -> &Self::Target {
        &self.inner
    }
}
impl<T> core::ops::DerefMut for InheritedServiceExposure<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.inner
    }
}
impl InheritedServiceExposure<InheritedService> {
    #[export(overrides = BaseService, entry_id = 0)]
    pub fn renamed_by_id(&self) -> u32 {
        1
    }
    #[export(overrides = BaseService, route = "MethodTwo")]
    pub fn renamed_by_route(&self) -> u32 {
        2
    }
    #[export(overrides = BaseService)]
    pub fn method_three(&self) -> u32 {
        3
    }
    pub fn try_handle(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                eid,
            ) if id == <BaseService as sails::meta::Identifiable>::INTERFACE_ID
                && eid
                    == {
                        const ID: u16 = sails::meta::find_id(
                            <BaseService as sails::meta::ServiceMeta>::METHODS,
                            "MethodThree",
                        );
                        ID
                    } => {
                let request: inherited_service_meta::__MethodThreeParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.method_three();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<u32>() {
                    sails::gstd::encode_invocation_payload::<
                        inherited_service_meta::__MethodThreeParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                eid,
            ) if id == <BaseService as sails::meta::Identifiable>::INTERFACE_ID
                && eid
                    == {
                        const ID: u16 = sails::meta::find_id(
                            <BaseService as sails::meta::ServiceMeta>::METHODS,
                            "MethodTwo",
                        );
                        ID
                    } => {
                let request: inherited_service_meta::__RenamedByRouteParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.renamed_by_route();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<u32>() {
                    sails::gstd::encode_invocation_payload::<
                        inherited_service_meta::__RenamedByRouteParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                0u16,
            ) if id == <BaseService as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: inherited_service_meta::__RenamedByIdParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.renamed_by_id();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<u32>() {
                    sails::gstd::encode_invocation_payload::<
                        inherited_service_meta::__RenamedByIdParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            _ => None,
        }
    }
    pub async fn try_handle_async(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            _ => None,
        }
    }
}
impl sails::gstd::services::Service for InheritedService {
    type Exposure = InheritedServiceExposure<Self>;
    fn expose(self, route_idx: u8) -> Self::Exposure {
        Self::Exposure {
            route_idx,
            inner: self,
        }
    }
}
mod inherited_service_meta {
    use super::*;
    const __INTERFACE_ID: sails::meta::InterfaceId = {
        let mut final_hash = sails::keccak_const::Keccak256::new();
        let hash = final_hash.finalize();
        sails::meta::InterfaceId::from_bytes_32(hash)
    };
    impl sails::meta::Identifiable for super::InheritedService {
        const INTERFACE_ID: sails::meta::InterfaceId = __INTERFACE_ID;
    }
    impl sails::meta::ServiceMeta for super::InheritedService {
        type CommandsMeta = CommandsMeta;
        type QueriesMeta = QueriesMeta;
        type EventsMeta = EventsMeta;
        const BASE_SERVICES: &'static [sails::meta::BaseServiceMeta] = &[];
        const METHODS: &'static [sails::meta::MethodMetadata] = &[];
        const ASYNC: bool = false;
    }
    const _: () = {
        let base_methods = <super::BaseService as sails::meta::ServiceMeta>::METHODS;
        if let Some(method) = sails::meta::find_method_data(
            base_methods,
            "MethodThree",
            None,
        ) {
            let base_name = method.name;
            if !sails::meta::bytes32_eq(
                &method.hash,
                &sails::hash_fn!("query" base_name, () -> u32),
            ) {
                core::panic!(
                    concat!("Override signature mismatch for method `", "MethodThree",
                    "`")
                );
            }
        } else {
            core::panic!(
                concat!("Method `", "MethodThree", "` not found in base service")
            );
        }
    };
    const _: () = {
        let base_methods = <super::BaseService as sails::meta::ServiceMeta>::METHODS;
        if let Some(method) = sails::meta::find_method_data(
            base_methods,
            "MethodTwo",
            None,
        ) {
            let base_name = method.name;
            if !sails::meta::bytes32_eq(
                &method.hash,
                &sails::hash_fn!("query" base_name, () -> u32),
            ) {
                core::panic!(
                    concat!("Override signature mismatch for method `", "MethodTwo", "`")
                );
            }
        } else {
            core::panic!(
                concat!("Method `", "MethodTwo", "` not found in base service")
            );
        }
    };
    const _: () = {
        let base_methods = <super::BaseService as sails::meta::ServiceMeta>::METHODS;
        if let Some(method) = sails::meta::find_method_data(
            base_methods,
            "RenamedById",
            Some(0u16),
        ) {
            let base_name = method.name;
            if !sails::meta::bytes32_eq(
                &method.hash,
                &sails::hash_fn!("query" base_name, () -> u32),
            ) {
                core::panic!(
                    concat!("Override signature mismatch for method `", "RenamedById",
                    "`")
                );
            }
        } else {
            core::panic!(
                concat!("Method `", "RenamedById", "` not found in base service")
            );
        }
    };
    sails::invocation_io!(
        pub struct __MethodThreeParams {}, interface_id = < super::BaseService as
        sails::meta::Identifiable > ::INTERFACE_ID, entry_id = { const ID : u16 =
        sails::meta::find_id(< super::BaseService as sails::meta::ServiceMeta >
        ::METHODS, "MethodThree",); ID },
    );
    sails::invocation_io!(
        pub struct __RenamedByRouteParams {}, interface_id = < super::BaseService as
        sails::meta::Identifiable > ::INTERFACE_ID, entry_id = { const ID : u16 =
        sails::meta::find_id(< super::BaseService as sails::meta::ServiceMeta >
        ::METHODS, "MethodTwo",); ID },
    );
    sails::invocation_io!(
        pub struct __RenamedByIdParams {}, interface_id = < super::BaseService as
        sails::meta::Identifiable > ::INTERFACE_ID, entry_id = 0u16,
    );
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum CommandsMeta {}
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum QueriesMeta {}
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum NoEvents {}
    pub type EventsMeta = NoEvents;
}
