rs/macros/core/tests/snapshots/gservice__works_with_generic_impl_and_concrete_extends.snap
---
source: rs/macros/core/tests/gservice.rs
expression: result
---
pub struct ChildServiceExposure<T> {
    route_idx: u8,
    inner: T,
}
impl<T: sails_rs::meta::ServiceMeta> sails_rs::gstd::services::Exposure
for ChildServiceExposure<T> {
    fn interface_id() -> sails_rs::meta::InterfaceId {
        <T as sails_rs::meta::Identifiable>::INTERFACE_ID
    }
    fn route_idx(&self) -> u8 {
        self.route_idx
    }
    fn check_asyncness(
        interface_id: sails_rs::meta::InterfaceId,
        entry_id: u16,
    ) -> Option<bool> {
        if !T::ASYNC {
            return Some(false);
        }
        match (interface_id, entry_id) {
            (id, 0u16) if id == <T as sails_rs::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            (
                id,
                eid,
            ) if sails_rs::meta::service_has_interface_id(
                &T::BASE_SERVICES[0usize],
                id,
            ) => {
                return <<BaseService<
                    u8,
                > as sails_rs::gstd::services::Service>::Exposure as sails_rs::gstd::services::Exposure>::check_asyncness(
                    id,
                    eid,
                );
            }
            _ => None,
        }
    }
}
impl<T> core::ops::Deref for ChildServiceExposure<T> {
    type Target = T;
    fn deref(&self) -> &Self::Target {
        &self.inner
    }
}
impl<T> core::ops::DerefMut for ChildServiceExposure<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.inner
    }
}
#[allow(clippy::from_over_into)]
impl<T: SomeBound> Into<BaseService<u8>> for ChildServiceExposure<ChildService<T>> {
    fn into(self) -> BaseService<u8> {
        self.inner.into()
    }
}
impl<T: SomeBound> ChildServiceExposure<ChildService<T>> {
    #[export]
    pub fn foo(&self) -> u32 {
        0
    }
    pub fn try_handle(
        mut self,
        interface_id: sails_rs::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails_rs::gstd::{InvocationIo, CommandReply};
        match (interface_id, entry_id) {
            (
                id,
                0u16,
            ) if id
                == <self::ChildService<
                    T,
                > as sails_rs::meta::Identifiable>::INTERFACE_ID => {
                let request: child_service_meta::__FooParams = sails_rs::scale_codec::Decode::decode(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.foo();
                let value = 0u128;
                if !sails_rs::gstd::is_empty_tuple::<u32>() {
                    <child_service_meta::__FooParams as sails_rs::gstd::InvocationIo>::with_optimized_encode(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                eid,
            ) if sails_rs::meta::service_has_interface_id(
                &<self::ChildService<
                    T,
                > as sails_rs::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: BaseService<u8> = self.inner.into();
                return sails_rs::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle(interface_id, entry_id, input, result_handler);
            }
            _ => None,
        }
    }
    pub async fn try_handle_async(
        mut self,
        interface_id: sails_rs::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails_rs::gstd::{InvocationIo, CommandReply};
        match (interface_id, entry_id) {
            (
                id,
                eid,
            ) if sails_rs::meta::service_has_interface_id(
                &<self::ChildService<
                    T,
                > as sails_rs::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: BaseService<u8> = self.inner.into();
                return sails_rs::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle_async(interface_id, entry_id, input, result_handler)
                    .await;
            }
            _ => None,
        }
    }
}
impl<T: SomeBound> sails_rs::gstd::services::Service for ChildService<T> {
    type Exposure = ChildServiceExposure<Self>;
    fn expose(self, route_idx: u8) -> Self::Exposure {
        Self::Exposure {
            route_idx,
            inner: self,
        }
    }
}
mod child_service_meta {
    use super::*;
    const __SERVICE_INTERFACE_ID: sails_rs::meta::InterfaceId = {
        let mut final_hash = sails_rs::keccak_const::Keccak256::new();
        final_hash = final_hash.update(&sails_rs::hash_fn!(query Foo() -> u32));
        final_hash = final_hash
            .update(
                &<super::BaseService<u8> as sails_rs::meta::Identifiable>::INTERFACE_ID.0,
            );
        let hash = final_hash.finalize();
        sails_rs::meta::InterfaceId::from_bytes_32(hash)
    };
    impl<T: SomeBound> sails_rs::meta::Identifiable for super::ChildService<T> {
        const INTERFACE_ID: sails_rs::meta::InterfaceId = __SERVICE_INTERFACE_ID;
    }
    impl<T: SomeBound> sails_rs::meta::ServiceMeta for super::ChildService<T> {
        type CommandsMeta = CommandsMeta;
        type QueriesMeta = QueriesMeta;
        type EventsMeta = EventsMeta;
        const BASE_SERVICES: &'static [sails_rs::meta::BaseServiceMeta] = &[
            sails_rs::meta::BaseServiceMeta::new::<super::BaseService<u8>>("BaseService"),
        ];
        const METHODS: &'static [sails_rs::meta::MethodMetadata] = &[
            sails_rs::meta::MethodMetadata {
                name: "Foo",
                entry_id: 0u16,
                hash: sails_rs::hash_fn!(query Foo() -> u32),
                is_async: false,
            },
        ];
        const ASYNC: bool = <super::BaseService<
            u8,
        > as sails_rs::meta::ServiceMeta>::ASYNC;
    }
    sails_rs::invocation_io!(
        pub struct __FooParams {}, interface_id = __SERVICE_INTERFACE_ID, entry_id =
        0u16,
    );
    #[derive(sails_rs::TypeInfo)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub enum CommandsMeta {}
    #[derive(sails_rs::TypeInfo)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub enum QueriesMeta {
        Foo(__FooParams, u32),
    }
    #[derive(sails_rs::TypeInfo)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub enum NoEvents {}
    pub type EventsMeta = NoEvents;
}
